# mm-parameter-lab

./: .gitignore  PLAN.md  README.md  pyproject.toml
backend/: experiments.yaml
backend/mm_sim/: __init__.py  engine.py  logging_config.py  results.py  rng.py  types.py
backend/mm_sim/market/: __init__.py  book.py  matching.py  processes.py
backend/mm_sim/metrics/: __init__.py  adverse_selection.py  inventory.py  per_counterparty.py  pnl.py
backend/mm_sim/quoter/: __init__.py  avellaneda_stoikov.py  interventions.py  vol_estimator.py
backend/mm_sim/scenarios/: __init__.py  library.py
backend/mm_sim/traders/: __init__.py  counterparty.py  informed.py  noise.py
backend/runner/: __init__.py  batch.py  cli.py  manifest.py
backend/server/: __init__.py  app.py  session.py
backend/tests/: test_as_quoter.py  test_book.py  test_matching.py  test_metrics.py  test_reproducibility.py
docs/: findings.md  math_appendix.md
docs/figures/: baseline_summary.json  f1_summary.json  f2_summary.json  f3_summary.json  f4_summary.json
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: rest.ts  ws.ts  wsPump.ts
frontend/src/components/: InterventionToggles.tsx  InventoryChart.tsx  InventoryRiskPanel.tsx  MetricsDashboard.tsx  OrderBookLadder.tsx  (+9 more)
notebooks/: 03_baseline.py  04_finding1.py  05_finding2.py  06_finding3.py  07_finding4.py
notebooks/_shared/: load.py  plotting.py
scripts/: build_findings_pdf.sh  render_all_figures.sh  run_all_experiments.sh
(+4 files in other folders)
