[project]
name = "market-maker-visualiser"
version = "0.1.0"
description = "Interactive market-maker simulator and parameter laboratory"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.7",
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=1.0",
    "pyarrow>=15.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "websockets>=12.0",
    "click>=8.1",
    "rich>=13.7",
    "structlog>=24.1",
    "sortedcontainers>=2.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
    "pandas-stubs",
    "types-PyYAML",
]
notebooks = [
    "jupyter>=1.0",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "papermill>=2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/mm_sim", "backend/runner", "backend/server"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["polars.*", "pyarrow.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
addopts = "-v --tb=short"
pythonpath = ["backend"]
